--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,3 +74,9 @@
   .bd-mode-toggle .dropdown-menu .active .bi {
     display: block !important;
   }
+
+  .imgtop
+  {
+    background-image: url("../../img/banner.jpg");
+    background-size: cover;
+  }
